changed the jwt authentication, redirecting to the services