@@ -1,6 +1,6 @@
 package com.tcon.api_gateway.config;
 
-import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.reactive.EnableWebFluxSecurity;
@@ -9,48 +9,45 @@ import org.springframework.security.web.server.SecurityWebFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.reactive.CorsConfigurationSource;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
-import java.util.Arrays;
 
+import java.util.Arrays;
+import java.util.List;
+
+@Slf4j
 @Configuration
 @EnableWebFluxSecurity
-@RequiredArgsConstructor
 public class SecurityConfig {
 
     @Bean
     public SecurityWebFilterChain securityWebFilterChain(ServerHttpSecurity http) {
+        log.info("🔧 Configuring API Gateway Security");
+
         http
+                // Disable CSRF for stateless API
                 .csrf(ServerHttpSecurity.CsrfSpec::disable)
+
+                // Configure CORS
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+
+                // Permit all exchanges - JWT validation handled by AuthenticationFilter
                 .authorizeExchange(exchange -> exchange
-                        // Public endpoints - Authentication
-                        .pathMatchers("/api/auth/login", "/api/auth/register", "/api/auth/forgot-password").permitAll()
-                        .pathMatchers("/api/auth/refresh-token", "/api/auth/verify-email").permitAll()
+                        .anyExchange().permitAll()
+                )
 
-                        // Public endpoints - Health & Monitoring
-                        .pathMatchers("/actuator/**").permitAll()
-                        .pathMatchers("/eureka/**").permitAll()
+                // Disable form login and HTTP basic
+                .httpBasic(ServerHttpSecurity.HttpBasicSpec::disable)
+                .formLogin(ServerHttpSecurity.FormLoginSpec::disable);
 
-                        // WebSocket endpoints
-                        .pathMatchers("/communication/ws-messaging/**").permitAll()
-                        .pathMatchers("/ws-messaging/**").permitAll()
-
-                        // Public API endpoints
-                        .pathMatchers("/api/public/**").permitAll()
-
-                        // Courses endpoints public
-                        .pathMatchers("/api/courses/**").permitAll()
-
-                        // All other endpoints require authentication
-                        .anyExchange().authenticated()
-                );
-        // Removed: .addFilterAt(authenticationFilter, SecurityWebFiltersOrder.AUTHENTICATION);
-
+        log.info("✅ API Gateway Security configured - JWT validation delegated to AuthenticationFilter");
         return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
+        log.debug("Configuring CORS for API Gateway");
+
         CorsConfiguration configuration = new CorsConfiguration();
+
         configuration.setAllowedOrigins(Arrays.asList(
                 "http://localhost:3000",
                 "http://localhost:5173",
@@ -58,21 +55,30 @@ public class SecurityConfig {
                 "http://127.0.0.1:3000",
                 "http://127.0.0.1:5173"
         ));
+
         configuration.setAllowedMethods(Arrays.asList(
                 "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS", "HEAD"
         ));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+
+        configuration.setAllowedHeaders(List.of("*"));
+
         configuration.setExposedHeaders(Arrays.asList(
                 "Authorization",
                 "Content-Type",
                 "X-Total-Count",
-                "X-Request-Id"
+                "X-Request-Id",
+                "X-User-Id",
+                "X-User-Role",
+                "X-User-Email"
         ));
+
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
+
+        log.info("✅ CORS configured for multiple origins");
         return source;
     }
 }
